Testes para resolver problema com Dropdown não mostrando o menu quando em dialog (problema com z-index)

--- a/assets/styles/crosier.css
+++ b/assets/styles/crosier.css
@@ -141,7 +141,7 @@ input[type=submit], input[type=button], input[type=password] {
 
 
 .p-dropdown-panel.p-component {
-  z-index: 1101 !important;
+  z-index: 1102 !important;
 }
 
 .p-toast.p-component {
